<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/taxiTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/social_taxi"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:id="@+id/taxiMessageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="16sp"
                android:gravity="fill_horizontal"
                android:layout_below="@id/taxiTitle"
                android:text="@string/social_taxi_message_text"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:id="@+id/fortressDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="fill_horizontal"
                android:layout_below="@id/taxiMessageText"
                android:text="@string/social_taxi_address1"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <LinearLayout
                android:id="@+id/fortressDistrictInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fortressDistrict">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textSize="16sp"
                    android:gravity="fill_horizontal"
                    android:text="@string/phones"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    tools:ignore="RtlSymmetry"/>

                <TextView
                    android:id="@+id/socialTaxiPhoneNumber1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlue"
                    android:gravity="fill_horizontal"
                    android:text="@string/social_taxi_phoneNumber1"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fortressDistrictMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fortressDistrictInfo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textSize="16sp"
                    android:gravity="fill_horizontal"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/fortressEmailAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlue"
                    android:gravity="fill_horizontal"
                    android:text="@string/social_taxi_email_address1"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </LinearLayout>


            <TextView
                android:id="@+id/podilDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="fill_horizontal"
                android:layout_below="@id/fortressDistrictMail"
                android:text="@string/social_taxi_address2"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <LinearLayout
                android:id="@+id/podilDistrictInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/podilDistrict">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textSize="16sp"
                    android:gravity="fill_horizontal"
                    android:text="@string/phone"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/socialTaxiPhoneNumber2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlue"
                    android:gravity="fill_horizontal"
                    android:text="@string/social_taxi_phoneNumber2"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/podilDistrictMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/podilDistrictInfo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textSize="16sp"
                    android:gravity="fill_horizontal"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/podilEmailAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlue"
                    android:gravity="fill_horizontal"
                    android:text="@string/social_taxi_email_address2"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </LinearLayout>



            <Button
                android:id="@+id/yesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_below="@id/podilDistrictMail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/yes"/>

        </RelativeLayout>

    </ScrollView>
</LinearLayout>